Add access to pcf metrics